@@ -1,3 +1,4 @@
+8/19/11 add titles to surface color keys, fix black outline
 8/18/11 first pass at isosurface color keys
 8/18/11 add stubs for Options "rainbow mep" menu item
 8/18/11 add empty Options menu to menubar
